[project]
name = "eva-gmapsapiscanner"
version = "1.0.0"
description = "EVA Upgraded - Google Maps API Scanner by Bar Hajby - Enhanced version with 32+ API endpoint checks"
authors = [
    { name = "Ozgur Alp", email = "info@ozguralp.com" },
    { name = "Bar Hajby" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8,<4.0"
dependencies = [
    "requests>=2.32.5"
]

[project.urls]
repository = "https://github.com/ozguralp/gmapsapiscanner"

[project.scripts]
eva-gmaps-scanner = "eva_gmaps_scanner:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0"
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = """
    -v
    --strict-markers
    --tb=short
    --cov=tests
    --cov-report=html
    --cov-report=xml
    --cov-report=term-missing:skip-covered
    --cov-fail-under=80
"""
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests"
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning"
]

[tool.coverage.run]
source = ["tests"]
omit = [
    "*/__pycache__/*",
    "*/venv/*",
    "*/virtualenv/*",
    "*/site-packages/*",
    "*/dist-packages/*",
    "*/.tox/*",
    "*/.coverage*",
    "*/htmlcov/*",
    "*/conftest.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]
precision = 2
show_missing = true
skip_covered = false
fail_under = 80

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
